examples/test/testpolicy7287.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7287
  namespace: namespace50
spec:
  podSelector:
    matchLabels:
      key48: value23
      key11: value10
      key10: value38
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value4
          key49: value34
          key46: value18
      podSelector:
        matchLabels:
          key20: value43
          key16: value4
          key48: value35
